@startuml database

' avoid problems with angled crows feet
skinparam linetype ortho

entity workspaces {
    * workspaceId: string <<auto-generated>>
    * name: string
    * inviteCode: string
    imageUrl: string
    ---
    * userId: string <<FK>>
}

entity members {
    * userId: string <<FK>>
    * workspaceId: string <<FK>>
    ---
    * role: enum
}

entity projects {
    * workspaceId: string <<FK>>
    ---
    * name: string
    imageUrl: string
}

entity tasks {
    * workspaceId: string <<FK>>
    * projectId: string <<FK>>
    * assigneeId: string <<FK>>
    ---
    * name: string
    * dueDate: datetime
    * status: enum
    * position: integer
    description: string
}

workspaces ||--|{ members
workspaces ||--o{ projects
workspaces ||--o{ tasks
projects ||--o{ tasks

@enduml